// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Required > prints correctly for missing required prop 1`] = `
[
  "[31m[1mREQUIRED[22m should have required property 'id'[39m
",
  "  1 | {
> 2 |   "nested": {}
    |             ^ [95mid[39m is missing here!
  3 | }",
]
`;

exports[`Required > prints correctly for missing required prop[without colors] 1`] = `
[
  "REQUIRED should have required property 'id'
",
  "  1 | {
> 2 |   "nested": {}
    |             ^ id is missing here!
  3 | }",
]
`;
